# chomium2

./: README.md  args.gn  build.sh  chromium_version.txt  domain_substitution.list  downloads.ini  flags.macos.gn  llvm_download.ini  pruning.list
.github/scripts/: force_build.txt  github_before_build.sh  github_build.sh  github_get_env.sh  github_prepare_artifacts.sh  github_unpack_archive.sh
.github/workflows/: build.yml
devutils/: set_quilt_vars.sh  update_lists.py  validate_config.py
patches/: series
patches/core/bromite/: disable-fetching-field-trials.patch
patches/core/inox-patchset/: 0001-fix-building-without-safebrowsing.patch  0003-disable-autofill-download-manager.patch  0005-disable-default-extensions.patch  0009-disable-google-ipv6-probes.patch  0021-disable-rlz.patch
patches/core/iridium-browser/: all-add-trk-prefixes-to-possibly-evil-connections.patch  safe_browsing-disable-incident-reporting.patch  safe_browsing-disable-reporting-of-safebrowsing-over.patch
patches/core/ungoogled-chromium/: block-requests.patch  block-trk-and-subdomains.patch  disable-crash-reporter.patch  disable-domain-reliability.patch  disable-fonts-googleapis-references.patch  disable-gaia.patch  disable-google-host-detection.patch  disable-mei-preload.patch  disable-signin.patch  disable-untraceable-urls.patch  disable-webrtc-log-uploader.patch  disable-webstore-urls.patch  fix-building-without-enabling-reporting.patch  fix-building-without-one-click-signin.patch  fix-building-without-safebrowsing.patch  fix-node-path.patch  remove-unused-preferences-fields.patch  (+2 more)
(+58 files in other folders)
