clang_use_chrome_plugins=false
enable_hangout_services_extension=false
enable_js_type_check=false
enable_mdns=false
enable_mse_mpeg2ts_stream_parser=true
enable_nacl=false
enable_nacl_nonsfi=false
enable_one_click_signin=false
enable_reading_list=false
enable_remoting=false
enable_reporting=false
enable_service_discovery=false
enable_widevine=false
exclude_unwind_tables=true
fieldtrial_testing_like_official_build=true
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
safe_browsing_mode=1
treat_warnings_as_errors=false
use_official_google_api_keys=false
use_unofficial_version_number=false
blink_symbol_level=0
chrome_pgo_phase=0
enable_iterator_debugging=false
enable_swiftshader=true
fatal_linker_warnings=false
ffmpeg_branding="Chrome"
is_clang=true
is_debug=false
is_official_build=true
proprietary_codecs=true
symbol_level=0
use_gnome_keyring=false
use_sysroot=false
